<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp"
        android:columnCount="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/apps_header"
            android:id="@+id/tv_apps_header"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="0" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_spotify_streamer"
                android:id="@+id/btn_spotify_streamer"
                android:gravity="center"
                android:longClickable="false"
                android:onClick="sendMessage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_scores"
                android:id="@+id/btn_scores"
                android:onClick="sendMessage"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_library"
                android:id="@+id/btn_library"
                android:onClick="sendMessage" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_xyz"
                android:id="@+id/btn_xyz"
                android:onClick="sendMessage" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name_capstone"
                android:id="@+id/btn_capstone"
                android:background="@color/material_grey_100"
                android:textColor="@color/material_grey_850"
                android:onClick="sendMessage" />
        </LinearLayout>

    </GridLayout>

</RelativeLayout>
